Fix: cursor on mobile to not be shown

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -600,51 +600,6 @@ a {
   }
 }
 
-.debug-screens::before {
-  position: fixed;
-  z-index: 2147483647;
-  bottom: 0;
-  left: 0;
-  padding: .3333333em .5em;
-  font-size: 12px;
-  line-height: 1;
-  font-family: sans-serif;
-  background-color: #000;
-  color: #fff;
-  box-shadow: 0 0 0 1px #fff;
-  content: 'screen: _';
-}
-
-@media (min-width: 470px) {
-  .debug-screens::before {
-    content: 'screen: sm';
-  }
-}
-
-@media (min-width: 768px) {
-  .debug-screens::before {
-    content: 'screen: md';
-  }
-}
-
-@media (min-width: 1024px) {
-  .debug-screens::before {
-    content: 'screen: lg';
-  }
-}
-
-@media (min-width: 1280px) {
-  .debug-screens::before {
-    content: 'screen: xl';
-  }
-}
-
-@media (min-width: 1536px) {
-  .debug-screens::before {
-    content: 'screen: 2xl';
-  }
-}
-
 .absolute {
   position: absolute;
 }
@@ -671,38 +626,6 @@ a {
 
 .top-4 {
   top: 1rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.right-6 {
-  right: 1.5rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
-.right-16 {
-  right: 4rem;
 }
 
 .right-8 {
@@ -780,10 +703,6 @@ a {
 
 .mb-20 {
   margin-bottom: 5rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 
 .mt-20 {
@@ -964,10 +883,6 @@ a {
   justify-content: flex-start;
 }
 
-.justify-end {
-  justify-content: flex-end;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -1033,10 +948,6 @@ a {
   overflow: hidden;
 }
 
-.break-words {
-  overflow-wrap: break-word;
-}
-
 .rounded-3xl {
   border-radius: 1.5rem;
 }
@@ -1081,16 +992,6 @@ a {
 .bg-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(74 64 54 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .object-contain {
@@ -1233,10 +1134,6 @@ a {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.opacity-80 {
-  opacity: 0.8;
-}
-
 .opacity-70 {
   opacity: 0.7;
 }
@@ -1256,34 +1153,6 @@ a {
 
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.cursor {
-  position: fixed;
-  background-color: #fff;
-  width: 10px;
-  height: 10px;
-  left: -10px;
-  top: -10px;
-  border-radius: 100%;
-  z-index: 10000;
-  transform: scale(1);
-}
-
-.cursor-follow {
-  position: fixed;
-  border: 1px solid #fff;
-  width: 30px;
-  height: 30px;
-  left: -21px;
-  top: -21px;
-  border-radius: 100%;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-  pointer-events: none;
-  z-index: 10000;
-  transform: scale(1);
 }
 
 .img-container {
@@ -1338,6 +1207,34 @@ a {
 }
 
 @media only screen and (min-width: 768px) {
+  .cursor {
+    position: fixed;
+    background-color: #fff;
+    width: 10px;
+    height: 10px;
+    left: -10px;
+    top: -10px;
+    border-radius: 100%;
+    z-index: 10000;
+    transform: scale(1);
+  }
+
+  .cursor-follow {
+    position: fixed;
+    border: 1px solid #fff;
+    width: 30px;
+    height: 30px;
+    left: -21px;
+    top: -21px;
+    border-radius: 100%;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
+    pointer-events: none;
+    z-index: 10000;
+    transform: scale(1);
+  }
+
   .panels-container {
     display: grid;
     grid-template-rows: 130px 130px 130px 130px 130px 130px 130px 130px 130px;
@@ -1546,10 +1443,6 @@ a {
     margin-top: 8rem;
   }
 
-  .md\:block {
-    display: block;
-  }
-
   .md\:flex {
     display: flex;
   }
@@ -1602,10 +1495,6 @@ a {
     justify-content: flex-end;
   }
 
-  .md\:justify-center {
-    justify-content: center;
-  }
-
   .md\:gap-32 {
     gap: 8rem;
   }
@@ -1653,12 +1542,6 @@ a {
 
   .md\:leading-loose {
     line-height: 2;
-  }
-
-  .md\:block {
-    position: absolute;
-    height: 100%;
-    width: 100%;
   }
 }
 
